# ever-assembler

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  commit_hash.txt
src/: complex.rs  convert.rs  debug.rs  errors.rs  lib.rs  macros.rs  parse.rs  simple.rs  writer.rs
src/disasm/: codedict.rs  fmt.rs  handlers.rs  loader.rs  mod.rs  tests.rs  types.rs
src/tests/: test_convert.rs  test_div_primitives.rs  test_parse.rs  test_pushcont.rs
src/tests/disasm/: code-dict-1.code.in  code-dict-1.code.out
src/tests/disasm/roundtrip/: 002.boc  003.boc  004.boc  007.boc  008.boc  009.boc  010.boc  011.boc  012.boc  013.boc  014.boc  015.boc  016.boc  017.boc  018.boc  019.boc  020.boc  024.boc  028.boc  029.boc  032.boc  033.boc  034.boc  036.boc  037.boc  038.boc  039.boc  040.boc  041.boc  042.boc  043.boc  045.boc  046.boc  047.boc  049.boc  053.boc  054.boc  055.boc  056.boc  057.boc  (+120 more)
