[package]
build = 'build.rs'
edition = '2021'
name = 'ever_assembler'
version = '1.6.11'

[dependencies]
anyhow = '1.0'
clap = { features = [ 'derive' ], version = '4.3' }
hex = '0.4'
log = '0.4'
num = '0.4'
num-traits = '0.2'
serde = { features = [ 'derive' ], version = '1.0' }
serde_json = '1.0'
thiserror = '1.0'
ever_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.11.8' }
ever_vm = { git = 'https://github.com/everx-labs/ever-vm.git', tag = '2.2.9' }

[features]
gosh = [  ]
groth = [  ]

